--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,10 +5,10 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: NodeTool@0
+- task: UseNode@0
   inputs:
-    versionSpec: '14.x'
-  displayName: 'Install Node.js'
+    versionSpec: '20.x'
+  displayName: 'Use Node.js 20.x'
 
 - script: |
     npm install -g npm@latest
@@ -34,3 +34,4 @@ steps:
     targetPath: '$(Build.ArtifactStagingDirectory)'
     artifact: 'drop'
   displayName: 'Publish Pipeline Artifact'
+  
