--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,5 @@
 trigger:
-  branches:
-    include:
-      - main
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -9,16 +7,21 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '14.x'
+    versionSpec: '16.x'
   displayName: 'Install Node.js'
 
 - script: |
     npm install
     npm run build
-  displayName: 'Install dependencies and build'
+    npm test
+  displayName: 'Install dependencies, build, and test'
 
-- task: PublishBuildArtifacts@1
+- task: Docker@2
   inputs:
-    PathtoPublish: 'dist'
-    ArtifactName: 'drop'
-  displayName: 'Publish build artifacts'
+    command: 'buildAndPush'
+    repository: '$(dockerId)/collaborator_management_github'
+    dockerfile: '**/Dockerfile'
+    containerRegistry: '$(dockerRegistryServiceConnection)'
+    tags: |
+      latest
+  displayName: 'Build and push Docker image'
