Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,8 @@ steps:
     command: 'buildAndPush'
     repository: '$(dockerId)/collaborator_management_github'
     dockerfile: '**/Dockerfile'
-    containerRegistry: '$(dockerRegistryServiceConnection)'
+    containerRegistry: 'dockerRegistryServiceConnection'  # Assurez-vous que le nom correspond à celui créé
     tags: |
       latest
   displayName: 'Build and push Docker image'
+  
