--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,58 @@
-trigger:
-- main
+# Nom du pipeline
+name: CI-CD Pipeline
 
+# Déclencheurs du pipeline
+trigger:
+  branches:
+    include:
+      - main
+
+# Variables du pipeline
+variables:
+  buildConfiguration: 'Release'
+
+# Pool d'agents Azure DevOps
 pool:
   vmImage: 'ubuntu-latest'
 
+# Étapes du pipeline
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '16.x'
-  displayName: 'Install Node.js'
+# Étape 1 : Vérifier le code source
+- checkout: self
 
+# Étape 2 : Installer Node.js
+- task: UseNode@1
+  inputs:
+    version: '16.x'
+
+# Étape 3 : Installer les dépendances
 - script: |
     npm install
-    npm run build
-    npm test
-  displayName: 'Install dependencies, build, and test'
+  displayName: 'Installer les dépendances'
 
-- task: Docker@2
+# Étape 4 : Construire l'application
+- script: |
+    npm run build
+  displayName: 'collaborator_management'
+
+# Étape 5 : Exécuter les tests
+- script: |
+    npm test
+  displayName: 'Exécuter les tests'
+
+# Étape 6 : Publier les artefacts
+- task: PublishBuildArtifacts@1
   inputs:
-    command: 'buildAndPush'
-    repository: '$(dockerId)/collaborator_management_github'
-    dockerfile: '**/Dockerfile'
-    containerRegistry: 'MyDockerRegistryServiceConnection'  # Assurez-vous que le nom correspond à celui créé
-    tags: |
-      latest
-  displayName: 'Build and push Docker image'
+    PathtoPublish: 'dist'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+# Étape 7 : Déployer sur Azure App Service (si applicable)
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Concierge Subscription'
+    appType: 'webApp'
+    appName: 'collaborator_management'
+    package: $(Pipeline.Workspace)/drop
+
   
