--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure
 on:
   push:
     branches:
-      - master  # Modifier si vous utilisez une autre branche principale
+      - master  # Assurez-vous que la branche correspond à celle de votre dépôt
 
 jobs:
   build-and-push:
@@ -13,15 +13,27 @@ jobs:
       - name: Checkout du code
         uses: actions/checkout@v3
 
-      - name: Connexion à Azure Container Registry
+      - name: Authentification GitHub
         run: |
-          echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+          git config --global url."https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
-      - name: Construire l'image Docker
+      - name: Supprimer et reconfigurer `.git`
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/collaborator-app:latest .
+          rm -rf .git
+          git init
+          git remote add origin https://github.com/USERNAME/REPO_NAME.git
 
-      - name: Pousser l'image vers ACR
+      - name: Se connecter à Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Construire et pousser l'image Docker
         run: |
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/collaborator-app:latest
-          
+          docker build -t ${{ secrets.ACR_NAME }}/mon-image:latest .
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.ACR_NAME }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+          docker push ${{ secrets.ACR_NAME }}/mon-image:latest
+
+      - name: Déployer sur Azure
+        run: |
+          az acr repository show-tags --name ${{ secrets.ACR_NAME }} --repository mon-image
